bin_PROGRAMS=preprocess test clique_offline clique_online cut_offline cut_online compute_cost_to_file compute_cost_to_screen cut_online_specific_arrival exhaustive_offline

preprocess_SOURCES=preprocess.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc
test_SOURCES=test.cc MarginalGain.h MarginalGain.cc MarginalGainHeap.h MarginalGainHeap.cc
clique_offline_SOURCES=clique_offline.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc
clique_online_SOURCES=clique_online.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc
cut_offline_SOURCES=cut_offline.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc
cut_online_SOURCES=cut_online.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc
cut_online_specific_arrival_SOURCES=cut_online_specific_arrival.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc
exhaustive_offline_SOURCES=exhaustive_offline.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc
compute_cost_to_file_SOURCES=compute_cost_to_file.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc
compute_cost_to_screen_SOURCES=compute_cost_to_screen.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc
