bin_PROGRAMS=preprocess clique_offline clique_online cut_offline cut_online compute_cost_to_file compute_cost_to_screen cut_online_specific_arrival exhaustive_offline online_greedy onlineF_greedy
#bin_PROGRAMS=preprocess test

preprocess_SOURCES=preprocess.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
test_SOURCES=test.cc
clique_offline_SOURCES=clique_offline.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
clique_online_SOURCES=clique_online.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
cut_offline_SOURCES=cut_offline.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
cut_online_SOURCES=cut_online.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
cut_online_specific_arrival_SOURCES=cut_online_specific_arrival.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
exhaustive_offline_SOURCES=exhaustive_offline.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
compute_cost_to_file_SOURCES=compute_cost_to_file.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
compute_cost_to_screen_SOURCES=compute_cost_to_screen.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
online_greedy_SOURCES=online_greedy.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
onlineF_greedy_SOURCES=onlineF_greedy.cc Process.cc Process.h User.cc User.h Event.cc Event.h Util.cc Util.h MarginalGainHeap.h MarginalGainHeap.cc MarginalGain.h MarginalGain.cc UserEventBase.h UserEventBase.cc
